--- a/training/build.gradle
+++ b/training/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
     runtimeOnly 'org.postgresql:postgresql'
     developmentOnly "org.springframework.boot:spring-boot-devtools"
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 }
 
 test {
