Spring security added

--- a/training/src/main/resources/application.properties
+++ b/training/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/training
-spring.datasource.username=${POSTGRESUSERNAME}
-spring.datasource.password=${POSTGRESPASSWORD}
+##spring.datasource.username=${POSTGRESUSERNAME}
+##spring.datasource.password=${POSTGRESPASSWORD}
+spring.datasource.username=postgres
+Spring.datasource.password=admin
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = update
 server.port = 8081
