--- a/training/build.gradle
+++ b/training/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'junit:junit:4.13.1'
     implementation 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 }
 
 test {
