--- a/training/build.gradle
+++ b/training/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.1.1'
 }
 
 test {
