Implementing the WireMock to simulate a request to the service

--- a/training/build.gradle
+++ b/training/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.1.1'
+    testImplementation "com.github.tomakehurst:wiremock-jre8:2.27.2"
 }
 
 test {
